@@ -8,7 +8,7 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.data;
 
@@ -54,7 +54,7 @@ public final class Index {
 
   @Override
   public String toString() {
-    return String.format("%s[value=%d]", getClass().getSimpleName(), value);
+    return "%s[value=%d]".formatted(getClass().getSimpleName(), value);
   }
 
 }
