@@ -8,7 +8,7 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.util;
 
@@ -18,11 +18,11 @@ package org.assertj.core.util;
 public final class FailureMessages {
 
   public static String actualIsEmpty() {
-    return String.format("%nExpecting actual not to be empty");
+    return "%nExpecting actual not to be empty".formatted();
   }
 
   public static String actualIsNull() {
-    return String.format("%nExpecting actual not to be null");
+    return "%nExpecting actual not to be null".formatted();
   }
 
   private FailureMessages() {}
