@@ -8,7 +8,7 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.api.float_;
 
@@ -27,7 +27,7 @@ import org.assertj.core.data.Offset;
 class FloatAssert_isEqualTo_with_offset_Test extends FloatAssertBaseTest {
 
   private final Offset<Float> offset = offset(5f);
-  private final Float expected = new Float(8f);
+  private final Float expected = Float.valueOf(8f);
 
   @Override
   protected FloatAssert invoke_api_method() {
