@@ -8,7 +8,7 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.error;
 
@@ -35,6 +35,6 @@ class ShouldBeNullOrEmpty_create_Test {
     // WHEN
     String message = factory.create(new TextDescription("Test"), STANDARD_REPRESENTATION);
     // THEN
-    then(message).isEqualTo(String.format("[Test] %nExpecting null or empty but was: [\"Luke\", \"Yoda\"]"));
+    then(message).isEqualTo("[Test] %nExpecting null or empty but was: [\"Luke\", \"Yoda\"]".formatted());
   }
 }
