@@ -8,12 +8,11 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.error;
 
 import static org.assertj.core.api.BDDAssertions.then;
-import static org.assertj.core.error.ShouldEndWithPath.PATH_SHOULD_END_WITH;
 import static org.assertj.core.error.ShouldEndWithPath.shouldEndWith;
 import static org.assertj.core.presentation.StandardRepresentation.STANDARD_REPRESENTATION;
 import static org.mockito.Mockito.mock;
@@ -33,7 +32,7 @@ final class ShouldEndWithPath_create_Test {
     // WHEN
     String actualMessage = shouldEndWith(actual, other).create(new TestDescription("Test"), STANDARD_REPRESENTATION);
     // THEN
-    then(actualMessage).isEqualTo(String.format("[Test] " + PATH_SHOULD_END_WITH, actual, other));
+    then(actualMessage).isEqualTo("[Test] %nExpected path:%n  %s%nto end with:%n  %s%nbut it did not.".formatted(actual, other));
   }
 
 }
