@@ -8,7 +8,7 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  */
 package org.assertj.core.internal.files;
 
@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-
 import org.assertj.core.internal.Diff;
 import org.assertj.core.util.Files;
 import org.assertj.core.util.TextFileWriter;
@@ -58,7 +57,7 @@ class Diff_diff_File_String_Test {
   void should_return_empty_diff_list_if_file_and_string_have_equal_content() throws IOException {
     String[] content = array("line0", "line1");
     writer.write(actual, content);
-    String expected = String.format("line0%nline1");
+    String expected = "line0%nline1".formatted();
     List<Delta<String>> diffs = diff.diff(actual, expected, Charset.defaultCharset());
     assertThat(diffs).isEmpty();
   }
@@ -79,7 +78,7 @@ class Diff_diff_File_String_Test {
   @Test
   void should_return_diffs_if_content_of_actual_is_shorter_than_content_of_expected() throws IOException {
     writer.write(actual, "line_0");
-    String expected = String.format("line_0%nline_1");
+    String expected = "line_0%nline_1".formatted();
     List<Delta<String>> diffs = diff.diff(actual, expected, Charset.defaultCharset());
     assertThat(diffs).hasSize(1);
     assertThat(diffs.get(0)).hasToString(format("Missing content at line 2:%n"
